Correct Paragraph Texts git status clear

--- a/index.html
+++ b/index.html
@@ -22,11 +22,7 @@
                     <div class="article-text">
                         <h2>How to become a Frontend Engineer</h2>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing
-                            elit. Aut consequatur rem asperiores autem repellat
-                            nam, error suscipit architecto ullam aspernatur
-                            debitis culpa iusto ea doloribus deleniti quos quia!
-                            Necessitatibus, quis.
+                            To become a frontend engineer, start by learning the basics of web technologies like HTML, CSS, and JavaScript. Then, learn a frontend framework like React or Angular, build projects, attend coding bootcamps, stay up to date with the latest trends and technologies, and build a portfolio of your work to showcase your skills to potential employers.
                         </p>
                         <a href="./article-1.html" target="_blank">Read More</a>
                     </div>
@@ -42,11 +38,7 @@
                     <div class="article-text">
                         <h2>Interview questions for Frontend Role</h2>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing
-                            elit. Aut consequatur rem asperiores autem repellat
-                            nam, error suscipit architecto ullam aspernatur
-                            debitis culpa iusto ea doloribus deleniti quos quia!
-                            Necessitatibus, quis.
+                            Common interview questions for a frontend role include asking about a candidate's experience with HTML, CSS, and JavaScript, their knowledge of responsive design, website performance optimization, accessibility, and cross-browser compatibility. They may also be asked about their experience with frontend frameworks such as React or Angular, debugging and troubleshooting, and their approach to staying up to date with frontend development trends and best practices. These questions aim to evaluate a candidate's technical proficiency, problem-solving abilities, and familiarity with frontend technologies and frameworks.
                         </p>
                         <a href="./article-1.html" target="_blank">Read More</a>
                     </div>
@@ -62,11 +54,7 @@
                     <div class="article-text">
                         <h2>Frontend Salaries</h2>
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing
-                            elit. Aut consequatur rem asperiores autem repellat
-                            nam, error suscipit architecto ullam aspernatur
-                            debitis culpa iusto ea doloribus deleniti quos quia!
-                            Necessitatibus, quis.
+                            According to data from Glassdoor, the average base salary for a frontend engineer in the United States is around $90,000 per year. However, salaries for frontend engineers in the US can vary depending on several factors, such as the location, years of experience, and company size. Salaries can range from $63,000 to $124,000 per year, with some senior frontend engineers earning over $150,000 per year. Additionally, companies may offer bonuses, stock options, and other perks that can increase a frontend engineer's total compensation.
                         </p>
                         <a href="./article-1.html" target="_blank">Read More</a>
                     </div>
