Add 5 more articles

--- a/index.html
+++ b/index.html
@@ -90,6 +90,21 @@
                         Replit (YC W18) Is Hiring to Rapidly Scale
                         Infrastructure
                     </li>
+                    <li>
+                        The Role of a Front-End Developer: Responsibilities and Skills
+                    </li>
+                    <li>
+                        A Comprehensive Guide to the Role of a Front-End Developer
+                    </li>
+                    <li>
+                        What is a Front-End Developer and What Do They Do?
+                    </li>
+                    <li>
+                        The Skills Every Front-End Developer Should Have
+                    </li>
+                    <li>
+                        The Future of Front-End Development: Trends and Predictions for 2021
+                    </li>
                 </ol>
             </section>
             <section>
