Add one more sentence to Froend End salaries paragraph

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <div class="article-text">
                         <h2>Frontend Salaries</h2>
                         <p>
-                            According to data from Glassdoor, the average base salary for a frontend engineer in the United States is around $90,000 per year. However, salaries for frontend engineers in the US can vary depending on several factors, such as the location, years of experience, and company size. Salaries can range from $63,000 to $124,000 per year, with some senior frontend engineers earning over $150,000 per year. Additionally, companies may offer bonuses, stock options, and other perks that can increase a frontend engineer's total compensation.
+                            According to data from Glassdoor, the average base salary for a frontend engineer in the United States is around $90,000 per year. However, salaries for frontend engineers in the US can vary depending on several factors, such as the location, years of experience, and company size. Salaries can range from $63,000 to $124,000 per year, with some senior frontend engineers earning over $150,000 per year. Additionally, companies may offer bonuses, stock options, and other perks that can increase a frontend engineer's total compensation. It is important to mention that salaries also vary state by state.
                         </p>
                         <a href="./article-1.html" target="_blank">Read More</a>
                     </div>
